how simple indeed - fixed mobile project hover
well this wasn’t an issue with mobile, as I thought was the case when
‘circular text’ was showing too small on iOS. It was simply simple case
of not implementing vendor prefixes for the ‘transform-origin’ property
… and I also found inconsistency with the CSS ‘display-table’ property
in firefox so I fixed that.

--- a/theme/manimejia/foundation-manimejia.scss
+++ b/theme/manimejia/foundation-manimejia.scss
@@ -1551,6 +1551,10 @@ $tabs-navigation-font-color: $white;
 	    top: 0rem;
 	    height: $circle-radius;
 	    width: $char-width;
+	    -webkit-transform-origin: bottom center;
+	    -moz-transform-origin: bottom center;
+	    -ms-transform-origin: bottom center;
+	    -o-transform-origin: bottom center;
 	    transform-origin: bottom center;
 	    padding-top:$circle-padding;
 	  }
